--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <figcaption>The Rosette Nebula</figcaption>
 </figure>
 
-                    <button id="rosette">See on map</button>
+                    <button id="destination-button--rosette">See on map</button>
                 </div>
                 <div class="col">
                     
@@ -72,7 +72,7 @@
     <figcaption>Eta Carinae</figcaption>
 </figure>
 
-                    <button id="carinae">See on map</button>
+                    <button id="destination-button--carinae">See on map</button>
                 </div>
                 <div class="col">
                     
@@ -81,7 +81,7 @@
     <figcaption>Cygnus X1</figcaption>
 </figure>
 
-                    <button id="cygnus">See on map</button>
+                    <button id="destination-button--cygnus">See on map</button>
                 </div>
         </div>
     </div>
