Make paths relative

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galaxy Map - GalacticTravel</title>
-    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/site.css?v=AKvNjO3dCPPS0eSU1Ez8T2wI280i08yGycV9ndytL-c">
-    <link rel="stylesheet" href="/GalacticTravel.styles.css?v=5iuHfTpIbWps8ln2rWcXsPPj5oew1-SV3lOQo2xyJkw">
+    <link rel="stylesheet" href="./lib/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/site.css?v=AKvNjO3dCPPS0eSU1Ez8T2wI280i08yGycV9ndytL-c">
+    <link rel="stylesheet" href="./GalacticTravel.styles.css?v=5iuHfTpIbWps8ln2rWcXsPPj5oew1-SV3lOQo2xyJkw">
 
-    <link rel="stylesheet" href="css/Shared/image-with-label.css">
-    <link rel="stylesheet" href="css/Destination/Index.css">
-    <link rel="stylesheet" href="css/Shared/destination-summary.css">
+    <link rel="stylesheet" href="./css/Shared/image-with-label.css">
+    <link rel="stylesheet" href="./css/Destination/Index.css">
+    <link rel="stylesheet" href="./css/Shared/destination-summary.css">
 </head>
 <body>
 <header>
